@@ -5,6 +5,7 @@ import com.example.ShareFit.security.jwt.CustomLogoutFilter;
 import com.example.ShareFit.security.jwt.JwtFilter;
 import com.example.ShareFit.security.jwt.JwtUtil;
 import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,7 +18,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -35,11 +36,11 @@ public class SecurityConfig {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration configuration = new CorsConfiguration();
-                        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
-                        configuration.setAllowedMethods(Collections.singletonList("*"));
+                        configuration.setAllowedOrigins(List.of("https://share-fit.vercel.app/, https://localhost:3001"));
+                        configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE", "PUT", "OPTIONS"));
+                        configuration.setAllowedHeaders(List.of("*"));
                         configuration.setAllowCredentials(true);
-                        configuration.setAllowedHeaders(Collections.singletonList("*"));
-                        configuration.setMaxAge(3600L);
+                        configuration.setMaxAge(3000l);
                         return configuration;
                     }
                 }));
@@ -70,7 +71,13 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.POST,"/post").authenticated()
                         .requestMatchers(HttpMethod.PATCH,"/post/**").authenticated()
                         .requestMatchers(HttpMethod.DELETE,"/post/**").authenticated()
+                        .requestMatchers(HttpMethod.GET,"/test").authenticated()
                         .anyRequest().permitAll());
+
+        http
+                .exceptionHandling(exceptionHandling -> exceptionHandling
+                        .authenticationEntryPoint((request, response, authException) -> response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized"))
+                        .accessDeniedHandler((request, response, accessDeniedException) -> response.sendError(HttpServletResponse.SC_FORBIDDEN, "Forbidden")));
 
         //세션 설정 : STATELESS
         http
